# ContextSafe

./: .coderabbit.yaml  .env.example  .gitignore  ANALISIS_TECNICO.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  launcher.py  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
audit/: 01-top-10-issues.md  02-severity-summary.md  03-structural-debt.md  04-quick-wins.md  05-fixes-critical-high.md  06-nlp-pipeline.md  07-security-architecture.md  08-tests-coverage.md  09-missing-tests.md  10-commit-plan.md  README.md
deploy/gpu-server/: .env.example  docker-compose.yml
deploy/proxy-server/: .env.example  docker-compose.yml  nginx.conf  setup.sh
docker/: Dockerfile  docker-compose.yml
docs/: API.md  DEPLOYMENT.md  QUICKSTART.md  ROLLBACK.md  TESTING.md
docs/plans/: 2026-02-15-fix-anonymization-audit-errors.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AnonymizedPreview.tsx  CategoryChip.tsx  ConfidenceBadge.tsx  DiffViewer.tsx  DocumentList.tsx  EntityEditorModal.tsx  EntityViewer.tsx  ErrorBoundary.tsx  ExportDialog.tsx  FileUpload.tsx  GlossaryTable.tsx  LoadingSpinner.tsx  NotificationToast.tsx  ProcessingModal.tsx  ProcessingProgress.tsx  ProjectSelector.tsx  SettingsPanel.tsx  Sidebar.tsx  SystemLog.tsx  index.ts
frontend/src/components/review/: DocumentTypeBadge.tsx  EntityZoneGroup.tsx  ReviewProgressBar.tsx  SafetyLatchIndicator.tsx  index.ts
frontend/src/hooks/: index.ts  useIsMobile.ts  useProcessing.ts
frontend/src/layouts/: MainLayout.tsx  index.ts
frontend/src/screens/: GlossaryScreen.tsx  PreviewScreen.tsx  ProcessingScreen.tsx  ProjectsScreen.tsx  SettingsScreen.tsx  WorkspaceScreen.tsx  index.ts
frontend/src/services/: api.ts  index.ts  websocket.ts
frontend/src/stores/: documentStore.ts  index.ts  projectStore.ts  uiStore.ts
frontend/src/types/: index.ts
ml/docs/reports/de/: 2026-01-15_estado_proyecto_ner.md  2026-01-16_investigacion_pipeline_pii.md  2026-01-17_investigacion_evaluacion_adversarial.md  2026-01-20_adversarial_evaluation.md  2026-01-21_adversarial_evaluation_v2.md  2026-01-22_comparacion_v1_v2.md  2026-01-22_fix_tokenizer_v3.md  2026-01-23_adversarial_ner_v2.md  2026-01-23_baseline_adversarial_analysis.md  2026-01-24_gliner_baseline_evaluation.md  2026-01-27_investigacion_data_augmentation_fechas.md  2026-01-27_investigacion_text_normalization.md  2026-01-28_investigacion_estandares_evaluacion_ner.md  2026-01-28_investigacion_hybrid_ner.md  2026-01-29_gap_analysis_tests_vs_estandares.md  2026-01-29_investigacion_modelos_legales_multilingues.md  2026-01-30_investigacion_finetuning_legal_xlm_r.md  2026-01-30_investigacion_gaps_pipeline_hibrido.md  2026-01-31_guia_replicabilidad_multilingue.md  2026-01-31_mejores_practicas_ml_2026.md  2026-02-03_adversarial_v2_academic_r1.md  2026-02-04_checksum_integration.md  (+21 more)
ml/gazetteers/: apellidos.json  codigos_postales.json  direcciones.json  direcciones_flat.json  fechas_textuales.json  fechas_textuales_flat.json  identificadores_administrativos.json  identificadores_administrativos_flat.json  municipios.json  nombres_arcaicos.json  nombres_arcaicos_flat.json  nombres_hombres.json  nombres_mujeres.json  nombres_todos.json  organizaciones.json  organizaciones_flat.json
ml/scripts/: build_type_centroids.py  download_legal_xlm_roberta.py
ml/scripts/adversarial/: evaluate_adversarial.py
ml/scripts/evaluate/: diagnose_par_cases.py  evaluate_gliner_baseline.py  evaluate_lora_ner_adversarial.py  test_checksum_integration.py  test_date_integration.py  test_ner_predictor_adversarial.py  test_ner_predictor_adversarial_v2.py  test_regex_integration.py
ml/scripts/inference/: entity_validator.py  ner_predictor.py  text_normalizer.py
ml/scripts/preprocess/: audit_dataset.py  boundary_refinement.py  checksum_validators.py  explore_ai4privacy.py  generate_addresses.py  generate_administrative_ids.py  generate_archaic_names.py  generate_ner_dataset_v2.py  generate_organizations.py  generate_synthetic_sentences.py  generate_textual_dates.py  inject_ocr_noise.py  parse_ine_gazetteers.py  prepare_dataset_for_lora.py  spanish_date_patterns.py  spanish_id_patterns.py  text_normalizer.py
ml/scripts/train/: requirements_train.txt  train_lora_ner.py  train_ner.py
scripts/: setup.sh
src/contextsafe/: __init__.py  cli.py  main.py  server.py
src/contextsafe/api/: __init__.py  config.py  main.py  session_manager.py
src/contextsafe/application/: __init__.py  compute_mode.py
src/contextsafe/core/: __init__.py
src/contextsafe/domain/: __init__.py
src/contextsafe/infrastructure/: __init__.py
src/contextsafe/presentation/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_documents_api.py
tests/pbt/: _index.yaml  conftest.py  test_aggregates.py  test_anonymization.py  test_result_type.py  test_use_cases.py  test_value_objects.py
tests/traceability/: _index.yaml  test_F-001.yaml  test_F-002.yaml  test_F-003.yaml  test_F-004.yaml  test_F-005.yaml  test_F-006.yaml  test_F-007.yaml  test_F-008.yaml  test_F-009.yaml  test_F-010.yaml  test_F-011.yaml  test_F-012.yaml  test_F-013.yaml  test_F-014.yaml  test_F-015.yaml  test_F-016.yaml  test_F-017.yaml  test_F-018.yaml  test_F-019.yaml  test_F-UI-001.yaml  test_F-UI-002.yaml  test_F-UI-003.yaml  test_F-UI-004.yaml  test_F-UI-005.yaml
tests/unit/: conftest.py
tests/unit/application/: test_generate_anonymized.py  test_glossary_consistency_scan.py  test_ingest_document.py
tests/unit/domain/: conftest.py  test_aggregates.py  test_entities.py  test_events.py  test_result.py  test_value_objects.py
tests/unit/infrastructure/: test_anonymization_service.py  test_date_detection.py  test_intelligent_merge.py  test_platform_classification.py  test_spanish_recognizers.py  test_structural_overrides.py
(+391 files in other folders)
